{
    "name": "Input Controls",
    "maps": [
        {
            "name": "Player",
            "id": "2fbcd0f3-fb9c-4e55-be59-132d238c3d9a",
            "actions": [
                {
                    "name": "RotatePlanetCounterClockwise",
                    "type": "Button",
                    "id": "803093b6-af44-47ed-a134-d2e8a14d05b3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "RotatePlanetUp",
                    "type": "Button",
                    "id": "af06c60c-be3d-4ef1-872c-4d922a401731",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "RotatePlanetDown",
                    "type": "Button",
                    "id": "60db7e32-d779-43e9-910e-5ee128c6e5e0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "RotatePlanetClockwise",
                    "type": "Button",
                    "id": "74c2ea68-975e-4da4-a80f-dc0595d13972",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "39686ad1-5036-4739-91c6-bd15569db469",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "c1bf2ee9-89ba-4dfd-a4ff-be072427c840",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "242b09b1-cb86-4c1f-a0a7-6fe16d974373",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotatePlanetCounterClockwise",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0186b5b9-23ee-45e0-8091-62fe46e81155",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotatePlanetClockwise",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d6bf3c0f-b5d7-40a5-a737-0af817fc8c93",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotatePlanetUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cbf31dd9-06df-494a-8bff-a9a7494f4534",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotatePlanetDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "ArrowKeys",
                    "id": "0f3978dd-444a-4c38-9d40-52b96ac82226",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d967f49e-46b5-4144-a5ce-ee4471068007",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3814b4ce-5fab-4a98-87b1-8d0aba8c559c",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9305c428-d3de-4aa2-b809-4da33f619a62",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d0026d90-caa8-4909-98d7-3dcdc1694c5d",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "eda2c6c7-9fe6-4c2b-9dd5-394025e3ed55",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}